ios/chrome/browser/net/crl_set_fetcher.cc
@@ -163,9 +163,11 @@ void CRLSetFetcher::OnUpdateError(int error) {
 update_client::CrxInstaller::Result CRLSetFetcher::Install(
     const base::DictionaryValue& manifest,
     const base::FilePath& unpack_path) {
-  return update_client::InstallFunctionWrapper(
+  const auto result = update_client::InstallFunctionWrapper(
       base::Bind(&CRLSetFetcher::DoInstall, base::Unretained(this),
                  base::ConstRef(manifest), base::ConstRef(unpack_path)));
+  base::DeleteFile(unpack_path, true /* recursive */);
+  return result;
 }
 
 bool CRLSetFetcher::DoInstall(const base::DictionaryValue& manifest,
